--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-## https://github.com/vuejs/vuejs.org/blob/master/.gitignore
-
 .DS_Store
-Thumbs.db
-db.json
-*.log
 node_modules/
-public/
-.deploy*/
-src/_drafts
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
